--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -1,3 +1,6 @@
+body {
+  background-color: gray;
+}
 .container {
   display: flex;
   flex-flow: row nowrap;
@@ -34,5 +37,21 @@
     border: 1px solid gainsboro;
     border-radius: 50px ;
     box-shadow: 10px 10px 5px #888888;
+  }
+  .ageCharts{
+    width: 40vw;
+    height: 40vh;
+    padding: 5vh;
+    border: 1px solid gainsboro;
+    border-radius: 50px ;
+    box-shadow: 10px 10px 5px #888888;
+  }
+  #ageCharts_true{
+    position: absolute;
+    left: -215px;
+    top: 45vh;
+    margin-right: 50vw;
+    width: 80vw;
+    height: 80vh;
   }
 }
