--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -38,6 +38,15 @@ body {
     border-radius: 50px ;
     box-shadow: 10px 10px 5px #888888;
   }
+  .dataShow{
+    margin-top: 3vh;
+    width: 40vw;
+    height: 30vh;
+    padding: 5vh;
+    border: 1px solid gainsboro;
+    border-radius: 50px ;
+    box-shadow: 10px 10px 5px #888888;
+  }
   .ageCharts{
     width: 40vw;
     height: 40vh;
